--- a/src/kidney.ipynb
+++ b/src/kidney.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['ryan', 'josh', 'blake', 'connor']\n",
       "DEALING WITH ryan\n",
       "ryan is no longer a free man and is now tentatively engaged to lizzy\n",
       "DEALING WITH blake\n",
