added refactor and fixes

--- a/src/Part1DataOrganising.ipynb
+++ b/src/Part1DataOrganising.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "'Sheet1'"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
        "5   8.46   0.00   8.23  14.65  13.63   0.00  10.75   0.00   0.00   0.00  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2135,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -2162,65 +2162,59 @@
        "      <th>Pair</th>\n",
        "      <th>Patient Bloodtype</th>\n",
        "      <th>Donor Bloodtype</th>\n",
-       "      <th>Compatibility</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Donor Number</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>O</td>\n",
        "      <td>B</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>O</td>\n",
        "      <td>O</td>\n",
-       "      <td>Patient</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>A</td>\n",
        "      <td>A</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>A</td>\n",
        "      <td>O</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>O</td>\n",
        "      <td>AB</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Pair Patient Bloodtype Donor Bloodtype Compatibility\n",
-       "0  Donor Number                 O               B           NaN\n",
-       "1             2                 O               O       Patient\n",
-       "2             3                 A               A           NaN\n",
-       "3             4                 A               O           NaN\n",
-       "4             5                 O              AB           NaN"
+       "   Pair Patient Bloodtype Donor Bloodtype\n",
+       "0   1.0                 O               B\n",
+       "1   2.0                 O               O\n",
+       "2   3.0                 A               A\n",
+       "3   4.0                 A               O\n",
+       "4   5.0                 O              AB"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2.drop(df2.columns[4:305], axis=1, inplace=True)\n",
+    "df2.drop(df2.columns[3:305], axis=1, inplace=True)\n",
     "df2.head()"
    ]
   },
