added arcs in getInfo.py

--- a/src/Part1DataOrganising.ipynb
+++ b/src/Part1DataOrganising.ipynb
@@ -2215,7 +2215,7 @@
    ],
    "source": [
     "df2.drop(df2.columns[3:305], axis=1, inplace=True)\n",
-    "df2.head()"
+    "df2.tail()"
    ]
   },
   {
